--- a/package.json
+++ b/package.json
@@ -3,39 +3,26 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@storyblok/storyblok-editable": "^1.0.0",
-    "axios": "^0.21.1",
+    "@storyblok/react": "^1.0.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
-    "react-head": "^3.4.0",
-    "react-scripts": "4.0.3",
-    "storyblok-js-client": "^4.0.9"
+    "react-head": "^3.4.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "postcss-preset-env": "^6.7.0",
-    "storyblok-rich-text-react-renderer": "^2.3.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "postcss-preset-env": "^7.4.1",
+    "storyblok-rich-text-react-renderer": "^2.5.2",
+    "tailwindcss": "^3.0.23"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
